# elspeth-simple

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  cli.py  config.py  pyproject.toml  simple_example.yaml
.claude/skills/: axiom-data-engineering-plan.md  baseline-test-results.md  green-phase-evaluation.md  green-test-results.md  router-baseline-tests.md  skill-descriptions-only.md  test-scenarios-hub.md
.claude/skills/axiom-cloud-infrastructure/: PACK.md
.claude/skills/axiom-cloud-infrastructure-hub/: SKILL.md
.claude/skills/axiom-web-backend/: SKILL.md  baseline-results.md  test-scenarios.md  with-skill-results.md
.claude/skills/data-engineering-router/: SKILL.md
.claude/skills/ordis-quality-engineering/: SKILL.md
.claude/skills/writing-skills/: SKILL.md
core/: artifact_pipeline.py  config_schema.py  interfaces.py  orchestrator.py  registry.py  validation.py
core/controls/: cost_tracker.py  rate_limit.py  registry.py
core/experiments/: __init__.py  plugin_registry.py  plugins.py  runner.py  suite_runner.py
core/llm/: middleware.py  registry.py
core/prompts/: exceptions.py  loader.py  template.py
core/sda/: __init__.py  config.py  plugin_registry.py  runner.py  suite_runner.py
datasources/: __init__.py
docs/: ENVIRONMENT_VARIABLES.md  MIGRATION_TO_SRC_LAYOUT.md  OPENROUTER_SETUP.md  SDA_RENAMING_PLAN.md  axiom-cloud-infrastructure-plan.md  configuration-precedence.md  openrouter_example.yaml  pack-baseline-failures.md  pack-navigation-test-scenarios.md
docs/arch-analysis-2025-11-13-0933/: 00-coordination.md  01-discovery-findings.md  05-architecture-assessment.md  06-technical-debt-catalog.md
docs/arch-analysis-2025-11-14-1201/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md
docs/architecture/: README.md  diagrams.md  sda-components.md  subsystems.md
docs/plans/: 2025-11-13-centralize-config-merging.md  2025-11-13-refactor-runner-god-class.md  2025-11-14-remove-deprecated-suite-runner.md  2025-11-14-tdd-refactor-sda-runner.md
example/complex/: README.md  run.sh  settings.yaml
example/experimental/: README.md  settings.yaml
example/experimental/cycles/baseline-neutral/: config.json  system_prompt.md  user_prompt.md
example/experimental/cycles/variant-critical/: config.json  system_prompt.md  user_prompt.md
example/experimental/cycles/variant-enthusiastic/: config.json  system_prompt.md  user_prompt.md
example/simple/: .env.example  README.md  run.sh  settings.yaml  test_config.py
plugins/datasources/: blob.py  csv_local.py
plugins/experiments/: __init__.py
plugins/llms/: __init__.py  azure_openai.py  middleware.py  middleware_azure.py  mock.py
plugins/outputs/: analytics_report.py  archive_bundle.py  blob.py  csv_file.py  excel.py  file_copy.py  local_bundle.py  repository.py  signed.py  zip_bundle.py
plugins/transforms/: early_stop.py  metrics.py
src/elspeth/: __init__.py  cli.py  config.py
src/elspeth/core/: __init__.py  artifact_pipeline.py  artifacts.py  config_merger.py  config_schema.py  orchestrator.py  processing.py  registry.py  validation.py
src/elspeth/core/controls/: __init__.py  registry.py
src/elspeth/core/llm/: __init__.py  registry.py
src/elspeth/core/prompts/: __init__.py  engine.py
src/elspeth/core/sda/: __init__.py  checkpoint.py  config.py  early_stop.py  llm_executor.py  plugin_registry.py  plugins.py  prompt_compiler.py  result_aggregator.py  row_processor.py  runner.py  suite_runner.py
src/elspeth/core/security/: __init__.py  signing.py
src/elspeth/datasources/: blob_store.py
src/elspeth/orchestrators/: __init__.py  experimental.py  standard.py
src/elspeth/plugins/datasources/: __init__.py  blob.py  csv_local.py
src/elspeth/plugins/llms/: __init__.py  azure_openai.py  middleware.py  middleware_azure.py  mock.py  openrouter.py
src/elspeth/plugins/outputs/: __init__.py  analytics_report.py  archive_bundle.py  blob.py  csv_file.py  excel.py  file_copy.py  local_bundle.py  repository.py  signed.py  zip_bundle.py
src/elspeth/plugins/transforms/: early_stop.py  metrics.py
tests/core/: test_config_merger.py
tests/core/sda/: test_checkpoint.py  test_early_stop.py  test_integration.py  test_llm_executor.py  test_prompt_compiler.py  test_result_aggregator.py  test_row_processor.py  test_runner.py
